; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_parse-events.c_parse_events__term_clone.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_parse-events.c_parse_events__term_clone.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.parse_events__term = type { %struct.TYPE_2__, i32, i32, i32 }
%struct.TYPE_2__ = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @parse_events__term_clone(%struct.parse_events__term** %0, %struct.parse_events__term* %1) #0 {
  %3 = alloca %struct.parse_events__term**, align 8
  %4 = alloca %struct.parse_events__term*, align 8
  store %struct.parse_events__term** %0, %struct.parse_events__term*** %3, align 8
  store %struct.parse_events__term* %1, %struct.parse_events__term** %4, align 8
  %5 = load %struct.parse_events__term**, %struct.parse_events__term*** %3, align 8
  %6 = load %struct.parse_events__term*, %struct.parse_events__term** %4, align 8
  %7 = getelementptr inbounds %struct.parse_events__term, %struct.parse_events__term* %6, i32 0, i32 3
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.parse_events__term*, %struct.parse_events__term** %4, align 8
  %10 = getelementptr inbounds %struct.parse_events__term, %struct.parse_events__term* %9, i32 0, i32 2
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.parse_events__term*, %struct.parse_events__term** %4, align 8
  %13 = getelementptr inbounds %struct.parse_events__term, %struct.parse_events__term* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.parse_events__term*, %struct.parse_events__term** %4, align 8
  %16 = getelementptr inbounds %struct.parse_events__term, %struct.parse_events__term* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.parse_events__term*, %struct.parse_events__term** %4, align 8
  %20 = getelementptr inbounds %struct.parse_events__term, %struct.parse_events__term* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @new_term(%struct.parse_events__term** %5, i32 %8, i32 %11, i32 %14, i32 %18, i32 %22)
  ret i32 %23
}

declare dso_local i32 @new_term(%struct.parse_events__term**, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
